--- a/src/Pages/Desktop/styles.module.scss
+++ b/src/Pages/Desktop/styles.module.scss
@@ -8,6 +8,8 @@
   width: 64px;
   height: 100vh;
   z-index: 500;
+  display: flex;
+  flex-direction: column;
 
   & .item {
     width: 64px;
